Update yaml loop logic Remove devcontainer as it is out of compliance and not used by anyone

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,6 @@
         "programfiles",
         "REGHEXVALUE",
         "REGTYPE"
-    ]
+    ],
+    "azure-pipelines.1ESPipelineTemplatesSchemaFile": true
 }
