--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,13 @@ variables:
 - name: Codeql.Enabled
   value: true
 
+resources:
+  repositories:
+  - repository: 1esPipelines
+    type: git
+    name: 1ESPipelineTemplates/1ESPipelineTemplates
+    ref: refs/tags/release
+
 parameters:
 - name: pools
   type: object
@@ -33,7 +40,7 @@ parameters:
     os: windows
 
 extends:
-  template: v1/1ES.Unofficial.PipelineTemplate.yml@templates
+  template: v1/1ES.Unofficial.PipelineTemplate.yml@1esPipelines
   parameters:
     stages:
     - stage: stage
