--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,7 +51,7 @@ extends:
             name: ${{ pool.name }}
             os: ${{ pool.os }}
           steps:
-          - template: templates/build-test.yml
-          - template: templates/lint.yml
-          - template: templates/upstream-verify.yml
-          - template: templates/package-vsix.yml
+          - template: templates/build-test.yml@self
+          - template: templates/lint.yml@self
+          - template: templates/upstream-verify.yml@self
+          - template: templates/package-vsix.yml@self
