--- a/1es-azure-pipeline.yml
+++ b/1es-azure-pipeline.yml
@@ -44,25 +44,25 @@ extends:
   parameters:
     stages:
     - stage: Run Pipeline
-      - ${{ each pool in parameters.pools }}:
-        jobs:
+      jobs:
+      - ${{ each image in parameters.pools }}:
         - template: pipeline-templates/build-test.yaml@self
           parameters:
             pool:
-              name: ${{ pool.name }}
-              os: ${{ pool.os }}
+              name: ${{ image.name }}
+              os: ${{ image.os }}
         - template: pipeline-templates/lint.yaml@self
           parameters:
             pool:
-              name: ${{ pool.name }}
-              os: ${{ pool.os }}
+              name: ${{ image.name }}
+              os: ${{ image.os }}
         - template: pipeline-templates/upstream-verify.yaml@self
           parameters:
             pool:
-              name: ${{ pool.name }}
-              os: ${{ pool.os }}
+              name: ${{ image.name }}
+              os: ${{ image.os }}
         - template: pipeline-templates/package-vsix.yaml@self
           parameters:
             pool:
-              name: ${{ pool.name }}
-              os: ${{ pool.os }}
+              name: ${{ image.name }}
+              os: ${{ image.os }}
