move the task into steps instead of a job as u cant do a job in a job

--- a/pipeline-templates/install-node.yaml
+++ b/pipeline-templates/install-node.yaml
@@ -1,11 +1,5 @@
-parameters:
-  pool: ''
-
-jobs:
-- job: Install Node
-  pool: ${{ parameters.pool }}
+steps:
+- task: NodeTool@0
+  inputs:
+    versionSpec: '16.10.0'
   displayName: '⚛️ Install Node.js'
-  - task: NodeTool@0
-    inputs:
-      versionSpec: '16.10.0'
-    displayName: '⚛️ Install Node.js'
