--- a/pipeline-templates/lint.yaml
+++ b/pipeline-templates/lint.yaml
@@ -2,7 +2,7 @@ parameters:
   pool: ''
 
 jobs:
-  - template: templates/install-node.yml
+  - template: install-node.yml
   - job: TSLint
     pool: ${{ parameters.pool }}
     displayName: '🧶 TSLint'
