--- a/pipeline-templates/lint.yaml
+++ b/pipeline-templates/lint.yaml
@@ -6,7 +6,7 @@ jobs:
     pool: ${{ parameters.pool }}
     displayName: '🧶 TSLint'
     steps:
-    - template: install-node.yml
+    - template: install-node.yaml
     - bash: |
         npm install --cache /temp/empty-cache
         npm install tslint --reg https://registry.npmjs.org/ --verbose
