--- a/1es-azure-pipeline.yml
+++ b/1es-azure-pipeline.yml
@@ -42,6 +42,11 @@ parameters:
 extends:
   template: v1/1ES.Unofficial.PipelineTemplate.yml@1esPipelines
   parameters:
+    sdl:
+      sourceAnalysisPool:
+        name: $(DncEngInternalBuildPool)
+        image: 1es-windows-2022-pt
+        os: windows
     stages:
     - stage: Run Pipeline
       jobs:
