--- a/pipeline-templates/package-vsix.yaml
+++ b/pipeline-templates/package-vsix.yaml
@@ -2,7 +2,7 @@ parameters:
   pool: ''
 
 jobs:
-- job: Package
+- job: ${{ parameters.pool.os }} Package
   pool: ${{ parameters.pool }}
   displayName: '📦 Package and Publish'
   dependsOn:
