--- a/1es-azure-pipeline.yml
+++ b/1es-azure-pipeline.yml
@@ -32,13 +32,13 @@ parameters:
 - name: pools
   type: object
   default:
-  - name: $(DncEngInternalBuildPool)
+  - name:  NetCore1ESPool-Internal
     image: 1es-ubuntu-2204-pt
     os: linux
-  - name: $(DncEngInternalBuildPool)
+  - name:  NetCore1ESPool-Internal
     image: macOS-latest
     os: macOS
-  - name: $(DncEngInternalBuildPool)
+  - name:  NetCore1ESPool-Internal
     image: 1es-windows-2022-pt
     os: windows
 
@@ -47,7 +47,7 @@ extends:
   parameters:
     sdl:
       sourceAnalysisPool:
-        name: $(DncEngInternalBuildPool)
+        name:  NetCore1ESPool-Internal
         image: 1es-windows-2022-pt
         os: windows
     stages:
@@ -60,21 +60,21 @@ extends:
               name: ${{ image.name }}
               image: ${{ image.image }}
               os: ${{ image.os }}
-        - template: pipeline-templates/upstream-verify.yaml@self
-          parameters:
-            pool:
-              name: ${{ image.name }}
-              image: ${{ image.image }}
-              os: ${{ image.os }}
+      - template: pipeline-templates/upstream-verify.yaml@self
+        parameters:
+          pool:
+            name:  NetCore1ESPool-Internal
+            image: 1es-windows-2022-pt
+            os: windows
       - template: pipeline-templates/lint.yaml@self
         parameters:
           pool:
-            name: $(DncEngInternalBuildPool)
+            name:  NetCore1ESPool-Internal
             image: 1es-windows-2022-pt
             os: windows
       - template: pipeline-templates/package-vsix.yaml@self
         parameters:
           pool:
-            name: $(DncEngInternalBuildPool)
+            name: NetCore1ESPool-Internal
             image: 1es-windows-2022-pt
             os: windows
