--- a/pipeline-templates/build-test.yaml
+++ b/pipeline-templates/build-test.yaml
@@ -4,7 +4,7 @@ parameters:
 jobs:
 - job: ${{ parameters.pool.os }}_Build
   pool: ${{ parameters.pool }}
-  displayName: '🔨 ${{ parameters.pool }} Build and Test'
+  displayName: '🔨 ${{ parameters.pool.os }} Build and Test'
   templateContext:
     outputs:
     - output: pipelineArtifact
