--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,12 +44,18 @@ stages:
   - template: pipeline-templates/upstream-verify.yaml
     parameters:
       pool:
-        vmImage: 'windows-latest'
+        name: $(DncEngPublicBuildPool)
+        image: 'windows-latest'
+        os: windows
   - template: pipeline-templates/lint.yaml
     parameters:
       pool:
-        vmImage: 'windows-latest'
+        name: $(DncEngPublicBuildPool)
+        image: 'windows-latest'
+        os: windows
   - template: pipeline-templates/package-vsix.yaml
     parameters:
       pool:
-        vmImage: 'windows-latest'
+        name: $(DncEngPublicBuildPool)
+        image: 'windows-latest'
+        os: windows
