--- a/1es-azure-pipeline.yml
+++ b/1es-azure-pipeline.yml
@@ -51,7 +51,7 @@ extends:
         image: 1es-windows-2022-pt
         os: windows
     stages:
-    - stage: stage
+    - stage: Internal
       jobs:
       - ${{ each image in parameters.pools }}:
         - template: pipeline-templates/build-test.yaml@self
